--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "Tidies up newly released Rollup__mdt.IsDistinct__c functionality, adds RollupGrouping__mdt functionality to link two or more rollup operations together, fixes batch full recalcs for AVERAGE, MOST, FIRST, LAST",
-            "versionNumber": "1.6.26.0",
+            "versionName": "Fixes issue with concat delimiter not properly evaluating new line characters",
+            "versionNumber": "1.6.27.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -104,6 +104,7 @@
         "apex-rollup@1.6.23": "04t6g000008OawIAAS",
         "apex-rollup@1.6.24": "04t6g000008OawrAAC",
         "apex-rollup@1.6.25": "04t6g000008Ob22AAC",
-        "apex-rollup@1.6.26": "04t6g000008ObCnAAK"
+        "apex-rollup@1.6.26": "04t6g000008ObCnAAK",
+        "apex-rollup@1.6.27": "04t6g000008ObL7AAK"
     }
 }
