--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "Grandparent full recalc bugfixes",
-            "versionNumber": "1.6.29.0",
+            "versionName": "Tidying",
+            "versionNumber": "1.6.30.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -101,10 +101,6 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.6.23": "04t6g000008OawIAAS",
-        "apex-rollup@1.6.24": "04t6g000008OawrAAC",
-        "apex-rollup@1.6.25": "04t6g000008Ob22AAC",
-        "apex-rollup@1.6.26": "04t6g000008ObCnAAK",
         "apex-rollup@1.6.27": "04t6g000008ObL7AAK",
         "apex-rollup@1.6.28": "04t6g000008ObN8AAK",
         "apex-rollup@1.6.29": "04t6g000008ObNNAA0"
