--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@ljharb/eslint-config": "21.1.0",
     "@lwc/eslint-plugin-lwc": "1.7.2",
     "@prettier/plugin-xml": "3.4.1",
-    "@salesforce/cli": "2.35.6",
+    "@salesforce/cli": "2.48.6",
     "@salesforce/eslint-config-lwc": "3.5.3",
     "@salesforce/eslint-plugin-lightning": "1.0.0",
     "@salesforce/sfdx-lwc-jest": "4.0.1",
-    "@salesforce/sfdx-scanner": "^4.1.0",
+    "@salesforce/sfdx-scanner": "^4.3.2",
     "eslint": "8.8.0",
     "eslint-config-prettier": "9.1.0",
     "husky": "9.0.11",
@@ -49,7 +49,7 @@
     "get:project:json": "pwsh -Command \"&{ . ./scripts/generatePackage.ps1; Update-SFDX-Project-JSON }\"",
     "husky:pre-commit": "lint-staged",
     "lint:verify": "sf scanner run --target **/lwc/**/*.js,!node_modules/** --engine eslint-lwc --severity-threshold 3 --eslintconfig .eslintrc.json",
-    "prepare": "husky install && sf plugins link ./node_modules/@salesforce/sfdx-scanner && sf plugins link ./node_modules/@jongpie/sfdx-bummer-plugin",
+    "prepare": "husky init && sf plugins link ./node_modules/@salesforce/sfdx-scanner && sf plugins link ./node_modules/@jongpie/sfdx-bummer-plugin",
     "prettier": "prettier",
     "scan": "npm run lint:verify && npm run scan:pmd",
     "scan:pmd": "sf scanner run --pmdconfig config/pmd-ruleset.xml --target .,!plugins/ExtraCodeCoverage/** --engine pmd --severity-threshold 3",
