--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "Adds imperative Apex method Rollup.runFromApex for new and old record code paths",
-            "versionNumber": "1.6.32.0",
+            "versionName": "THIS_MONTH date literal bugfix, grandparent rollup updates",
+            "versionNumber": "1.6.33.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -105,6 +105,7 @@
         "apex-rollup@1.6.29": "04t6g000008ObNNAA0",
         "apex-rollup@1.6.30": "04t6g000008ObVhAAK",
         "apex-rollup@1.6.31": "04t6g000008ObblAAC",
-        "apex-rollup@1.6.32": "04t6g000008ObbvAAC"
+        "apex-rollup@1.6.32": "04t6g000008ObbvAAC",
+        "apex-rollup@1.6.33": "04t6g000008ObeQAAS"
     }
 }
