--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "THIS_MONTH date literal bugfix, grandparent rollup updates",
-            "versionNumber": "1.6.33.0",
+            "versionName": "Fixes parentRecordIdForEmptyChildrenCollections flow case",
+            "versionNumber": "1.6.34.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -69,12 +69,12 @@
             "package": "Apex Rollup - Extra Code Coverage",
             "versionDescription": "This plugin adds code coverage for Apex Rollup if you need additional code coverage for the base package",
             "versionName": "Updating code coverage",
-            "versionNumber": "0.0.23.0",
+            "versionNumber": "0.0.24.0",
             "default": false,
             "scopeProfiles": true,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.6.30"
+                    "package": "apex-rollup@1.6.34"
                 }
             ]
         },
@@ -91,21 +91,22 @@
         "Apex Rollup - Custom Logger@0.0.11-0": "04t6g000008SirvAAC",
         "Apex Rollup - Custom Logger@0.0.12-0": "04t6g000008SjqIAAS",
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
-        "Apex Rollup - Extra Code Coverage@0.0.22": "04t6g000008ObCiAAK",
         "Apex Rollup - Extra Code Coverage@0.0.23": "04t6g000008ObVmAAK",
+        "Apex Rollup - Extra Code Coverage@0.0.24": "04t6g000008ObgCAAS",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0O7AAI",
         "Apex Rollup - Nebula Logger@0.0.8-0": "04t6g000007zM6tAAE",
         "Apex Rollup - Rollup Callback": "0Ho6g000000GnA1CAK",
         "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC",
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
-        "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
+        "Nebula Logger - Core@4.14.4-optionally-auto-call-lightning-logger-lwc": "04t5Y0000015oRNQAY",
         "apex-rollup": "0Ho6g000000TNcOCAW",
         "apex-rollup@1.6.28": "04t6g000008ObN8AAK",
         "apex-rollup@1.6.29": "04t6g000008ObNNAA0",
         "apex-rollup@1.6.30": "04t6g000008ObVhAAK",
         "apex-rollup@1.6.31": "04t6g000008ObblAAC",
         "apex-rollup@1.6.32": "04t6g000008ObbvAAC",
-        "apex-rollup@1.6.33": "04t6g000008ObeQAAS"
+        "apex-rollup@1.6.33": "04t6g000008ObeQAAS",
+        "apex-rollup@1.6.34": "04t6g000008OfJfAAK"
     }
 }
