Fixes an issue reported by Katherine West where rollup ordering wasn't being properly applied

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "Fixes parentRecordIdForEmptyChildrenCollections flow case",
-            "versionNumber": "1.6.34.0",
+            "versionName": "Fixes Rollup Order By sorting to always be deterministic",
+            "versionNumber": "1.6.35.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -101,9 +101,6 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.14.4-optionally-auto-call-lightning-logger-lwc": "04t5Y0000015oRNQAY",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.6.28": "04t6g000008ObN8AAK",
-        "apex-rollup@1.6.29": "04t6g000008ObNNAA0",
-        "apex-rollup@1.6.30": "04t6g000008ObVhAAK",
         "apex-rollup@1.6.31": "04t6g000008ObblAAC",
         "apex-rollup@1.6.32": "04t6g000008ObbvAAC",
         "apex-rollup@1.6.33": "04t6g000008ObeQAAS",
