--- a/rollup-namespaced/sfdx-project.json
+++ b/rollup-namespaced/sfdx-project.json
@@ -31,6 +31,7 @@
         "apex-rollup-namespaced@1.1.25": "04t6g000008Obc0AAC",
         "apex-rollup-namespaced@1.1.26": "04t6g000008ObeVAAS",
         "apex-rollup-namespaced@1.1.27": "04t6g000008OfJkAAK",
-        "apex-rollup-namespaced@1.1.28": "04t6g000008OfKnAAK"
+        "apex-rollup-namespaced@1.1.28": "04t6g000008OfKnAAK",
+        "apex-rollup-namespaced@1.1.29": "04t6g000008OfMjAAK"
     }
 }
