--- a/rollup-namespaced/sfdx-project.json
+++ b/rollup-namespaced/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup-namespaced",
             "path": "rollup-namespaced/source/rollup",
-            "versionName": "Fixes Rollup Order By sorting to always be deterministic, allows text templates in Full Recalc CMDT-driven Invocable invocable",
-            "versionNumber": "1.1.28.0",
+            "versionName": "Fixes Rollup Order By issue when called from RollupFlowBulkProcessor",
+            "versionNumber": "1.1.29.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -31,6 +31,7 @@
         "apex-rollup-namespaced@1.1.25": "04t6g000008Obc0AAC",
         "apex-rollup-namespaced@1.1.26": "04t6g000008ObeVAAS",
         "apex-rollup-namespaced@1.1.27": "04t6g000008OfJkAAK",
-        "apex-rollup-namespaced@1.1.28": "04t6g000008OfKnAAK"
+        "apex-rollup-namespaced@1.1.28": "04t6g000008OfKnAAK",
+        "apex-rollup-namespaced@1.1.29": "04t6g000008OfMjAAK"
     }
 }
