--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "Fixes Rollup Order By sorting to always be deterministic, allows text templates in Full Recalc CMDT-driven Invocable invocable",
-            "versionNumber": "1.6.35.0",
+            "versionName": "Fixes Rollup Order By issue when called from RollupFlowBulkProcessor",
+            "versionNumber": "1.6.36.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -85,7 +85,7 @@
     ],
     "namespace": "",
     "sfdcLoginUrl": "https://login.salesforce.com",
-    "sourceApiVersion": "61.0",
+    "sourceApiVersion": "62.0",
     "packageAliases": {
         "Apex Rollup - Custom Logger": "0Ho6g000000Gn8ZCAS",
         "Apex Rollup - Custom Logger@0.0.11-0": "04t6g000008SirvAAC",
@@ -105,6 +105,7 @@
         "apex-rollup@1.6.32": "04t6g000008ObbvAAC",
         "apex-rollup@1.6.33": "04t6g000008ObeQAAS",
         "apex-rollup@1.6.34": "04t6g000008OfJfAAK",
-        "apex-rollup@1.6.35": "04t6g000008OfKiAAK"
+        "apex-rollup@1.6.35": "04t6g000008OfKiAAK",
+        "apex-rollup@1.6.36": "04t6g000008OfMeAAK"
     }
 }
