Fixes an issue brought up in #639 where scheduling a rollup can inadvertently exceed the max query rows

--- a/.prettierrc
+++ b/.prettierrc
@@ -16,6 +16,10 @@
     {
       "files": "*.{cls, apex}",
       "options": { "parser": "apex" }
+    },
+    {
+      "files": "**/*.xml",
+      "options": { "parser": "xml" }
     }
   ],
   "plugins": ["prettier-plugin-apex", "@prettier/plugin-xml"],
