--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "Scheduled Rollup updates, RollupDateLiteral updates",
-            "versionNumber": "1.7.1.0",
+            "versionName": "Fixes issue in RollupCalcItemReplacer where custom Type fields were incorrectly flagged as polymorphic",
+            "versionNumber": "1.7.2.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -107,6 +107,7 @@
         "apex-rollup@1.6.36": "04t6g000008OfMeAAK",
         "apex-rollup@1.6.37": "04t6g000008OfSEAA0",
         "apex-rollup@1.7.0": "04t6g000008OfTvAAK",
-        "apex-rollup@1.7.1": "04t6g000008OfWQAA0"
+        "apex-rollup@1.7.1": "04t6g000008OfWQAA0",
+        "apex-rollup@1.7.2": "04t6g000008OfXTAA0"
     }
 }
