--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ on:
 
 jobs:
   scratch-org-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     environment: Test
     steps:
       # Checkout the code
