Adds (non-pipeline, at the moment) support for sf code-analyzer commands

--- a/package.json
+++ b/package.json
@@ -9,23 +9,18 @@
   "author": "james.simone",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "7.24.4",
-    "@babel/eslint-parser": "7.24.1",
     "@jongpie/sfdx-bummer-plugin": "^0.0.20",
-    "@ljharb/eslint-config": "21.1.0",
-    "@lwc/eslint-plugin-lwc": "1.7.2",
+    "@lwc/eslint-plugin-lwc": "2.0.1",
     "@prettier/plugin-xml": "3.4.1",
-    "@salesforce/cli": "2.48.6",
-    "@salesforce/eslint-config-lwc": "3.5.3",
-    "@salesforce/eslint-plugin-lightning": "1.0.0",
-    "@salesforce/sfdx-lwc-jest": "4.0.1",
-    "@salesforce/sfdx-scanner": "^4.9.0",
-    "eslint": "8.8.0",
-    "eslint-config-prettier": "9.1.0",
+    "@salesforce/cli": "2.73.9",
+    "@salesforce/eslint-config-lwc": "3.7.1",
+    "@salesforce/eslint-plugin-lightning": "1.0.1",
+    "@salesforce/sfdx-lwc-jest": "7.0.1",
+    "@salesforce/sfdx-scanner": "^4.8.0",
     "husky": "9.0.11",
     "lint-staged": "15.2.2",
-    "prettier": "3.3.3",
-    "prettier-plugin-apex": "2.1.4"
+    "prettier": "3.4.2",
+    "prettier-plugin-apex": "2.2.2"
   },
   "keywords": [
     "salesforce",
@@ -48,12 +43,12 @@
     "delete:org": "sf org delete scratch --no-prompt --target-org apex-rollup-scratch-org",
     "get:project:json": "pwsh -Command \"&{ . ./scripts/generatePackage.ps1; Update-SFDX-Project-JSON }\"",
     "husky:pre-commit": "lint-staged",
-    "lint:verify": "sf scanner run --target **/lwc/**/*.js,!node_modules/** --engine eslint-lwc --severity-threshold 3 --eslintconfig .eslintrc.json",
+    "lint:verify": "sf code-analyzer run --rule-selector eslint",
     "prepare": "husky",
     "prettier": "prettier",
     "scan": "npm run lint:verify && npm run scan:pmd",
     "scan:pmd": "sf scanner run --pmdconfig config/pmd-ruleset.xml --target .,!plugins/ExtraCodeCoverage/** --engine pmd --severity-threshold 3",
-    "scan:graph": "sf scanner run -e sfge -p . --target 'rollup'",
+    "scan:apex": "sf code-analyzer run -r pmd:1 -r pmd:2 -r pmd:3 --workspace rollup/core/**/*.cls --workspace plugins --workspace extra-tests",
     "test": "npm run test:apex && npm run test:lwc",
     "test:apex": "sh ./scripts/runLocalTests.sh",
     "test:lwc": "sfdx-lwc-jest --coverage --skipApiVersionCheck"
