--- a/package.json
+++ b/package.json
@@ -44,12 +44,13 @@
     "delete:org": "sf org delete scratch --no-prompt --target-org apex-rollup-scratch-org",
     "get:project:json": "pwsh -Command \"&{ . ./scripts/generatePackage.ps1; Update-SFDX-Project-JSON }\"",
     "husky:pre-commit": "lint-staged",
-    "lint:verify": "sf code-analyzer run --rule-selector eslint",
+    "lint:verify": "sf scanner run --target rollup --engine eslint-lwc --severity-threshold 3 --eslintconfig .eslintrc.json",
+    "lint:verify:new": "sf code-analyzer run --rule-selector eslint",
     "prepare": "husky",
     "prettier": "prettier",
     "scan": "npm run lint:verify && npm run scan:pmd",
-    "scan:pmd": "sf scanner run --pmdconfig config/pmd-ruleset.xml --target .,!plugins/ExtraCodeCoverage/** --engine pmd --severity-threshold 3",
-    "scan:apex": "sf code-analyzer run -r pmd:1 -r pmd:2 -r pmd:3 --workspace rollup/core/**/*.cls --workspace plugins --workspace extra-tests",
+    "scan:pmd": "sf scanner run --pmdconfig config/pmd-ruleset.xml --target . --target !plugins/ExtraCodeCoverage/** --engine pmd --severity-threshold 3",
+    "scan:pmd:new": "sf code-analyzer run -r pmd:1 -r pmd:2 -r pmd:3 --workspace rollup/core/**/*.cls --workspace plugins --workspace extra-tests",
     "test": "npm run test:apex && npm run test:lwc",
     "test:apex": "sh ./scripts/runLocalTests.sh",
     "test:lwc": "sfdx-lwc-jest --coverage --skipApiVersionCheck"
